--- a/VerbiItaliani.Tests/VerbiItaliani.Tests.csproj
+++ b/VerbiItaliani.Tests/VerbiItaliani.Tests.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builders\GerundioBuilderTests.cs" />
     <Compile Include="Builders\PresenteBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
