Expanded verbs list, added some tests

--- a/VerbiItaliani.Tests/VerbiItaliani.Tests.csproj
+++ b/VerbiItaliani.Tests/VerbiItaliani.Tests.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Builders\GerundioBuilderTests.cs" />
+    <Compile Include="Builders\PassatoProssimoBuilderTests.cs" />
     <Compile Include="Builders\PresenteBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
